--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -160,7 +160,7 @@
           }
         }
         store.set('{{ site.domain }}', subs);
-        window.history.pushState('', '', 'ai-deadlines/?sub=' + subs.join());
+        window.history.pushState('', '', '/?sub=' + subs.join());
 
         // Event handler on checkbox change
         $('form :checkbox').change(function(e) {
